# zuul-config

./: .gitignore  README.rst  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
playbooks/ansible-role-appliance-base/tasks/: pre-run.yaml
playbooks/ansible-role-tests-vqfx-base/: pre-run.yaml  run.yaml
playbooks/base-controller-appliance-minimal-test/: post.yaml  pre.yaml
playbooks/base-minimal-test/: post-logs.yaml  post.yaml  pre.yaml
playbooks/cloud-vpn-aws-csr-to-aws-vpn/: run.yaml
playbooks/cloud-vpn-aws-csr-to-aws-vpn-bgp/: run.yaml
playbooks/cloud-vpn-aws-csr-to-aws-vyos/: run.yaml
playbooks/cloud-vpn-aws-to-aws/: run.yaml
playbooks/cloud-vpn-aws-vyos-to-aws-vpn/: run.yaml
playbooks/cloud-vpn-aws-vyos-to-aws-vyos/: run.yaml
playbooks/cloud-vpn-integration-tests/: pre.yaml  run.yaml
playbooks/dco-license/: run.yaml
playbooks/publish/: galaxy.yaml
playbooks/release/: run.yaml
roles/ansible-galaxy-import-fork/tasks/: main.yaml
roles/ansible-role-tests/tasks/: main.yaml
roles/cloud-vpn-aws-to-aws/tasks/: main.yaml
roles/cloud-vpn-integration-tests/: main.yaml
roles/dump-ansible-images-keys/tasks/: main.yaml
roles/ensure-ansible-network-libs/tasks/: main.yaml
roles/ensure-ansible/defaults/: main.yaml
roles/ensure-ansible/tasks/: main.yaml
roles/ensure-network-engine/tasks/: main.yaml
roles/ensure-pip-requirements/tasks/: main.yaml
roles/generate-appliance-inventory/tasks/: main.yaml
tools/: zuul-projects-checks.py
zuul.d/: jobs.yaml  pipelines.yaml  projects.yaml  secrets.yaml  semaphores.yaml
(+14 files in other folders)
