[metadata]
name = zuul-config
summary = A set of Ansible playbooks used by Ansible projects CI system
description-file =
    README.rst
author = Ansible contributors
home-page = https://www.ansible.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build
